<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shourya.weatherapp.RegisterActivity"
    android:background="@drawable/background">


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/sun_icon"
                android:layout_gravity="center_vertical|center_horizontal"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="7dp">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="4dp"
                android:ems="10"
                android:hint="@string/enter_name"
                android:inputType="textPersonName" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="7dp">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawablePadding="4dp"
                android:ems="10"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="7dp">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="4dp"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="7dp">

            <EditText
                android:id="@+id/editTextMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_local_phone_black_24dp"
                android:drawablePadding="4dp"
                android:ems="10"
                android:hint="@string/enter_no"
                android:inputType="phone" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/buttonSubmit"
                android:onClick="onClick"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:foregroundGravity="center"
                android:padding="5dp"
                app:cardElevation="4dp"
                app:cardCornerRadius="7dp"
                card_view:cardBackgroundColor="@color/white">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_a_member"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_vertical|center_horizontal|bottom"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_gravity="center_vertical|center_horizontal|bottom"/>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
