<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/beachbackground"
    tools:context="com.example.shourya.weatherapp.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/weatherlogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/cloudy" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:foregroundGravity="center"
            android:padding="5dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="7dp"
            card_view:cardBackgroundColor="@color/transparent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/google" />

                <TextView
                    android:layout_width="175dp"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/loginscreen_login_with_google"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1.25"
                android:background="#c0c0c0" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:padding="3dp"
                android:text=""
                android:textColor="@color/black" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1.25"
                android:background="#c0c0c0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawablePadding="5dp"
                android:hint="@string/loginscreen_email"
                android:textSize="18sp" />

            <EditText
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="5dp"
                android:hint="@string/loginscreen_password"
                android:inputType="textPassword"
                android:textSize="18sp" />

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                app:cardElevation="4dp"
                android:foregroundGravity="center"
                android:padding="5dp"
                app:cardCornerRadius="8dp"
                card_view:cardBackgroundColor="@color/black">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/loginscreen_login"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/loginscreen_forgot"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/space"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="center"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/other"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="3dp"
                    android:layout_centerInParent="true"
                    android:layout_below="@+id/space"
                    android:text="@string/loginscreen_new_here"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/loginscreen_signup"
                    android:layout_below="@+id/other"
                    android:textSize="18sp"
                    android:textColor="@color/colorAccent" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>

